objects/Project2__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chart,</fullName>
                </value>
                <value>
                    <fullName>File Changed</fullName>
                </value>
                <value>
                    <fullName>Missing progress note</fullName>
                </value>
                <value>
                    <fullName>Only Progress notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_End_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ProjectEndDateDeadline</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISBLANK(End_Date__c),
No_End_Date__c = false
)</errorConditionFormula>
        <errorMessage>Please confirm that there is NO End Date by checking the &apos;No End Date&apos; checkbox</errorMessage>
    </validationRules>
</CustomObject>